--- a/user-security/pom.xml
+++ b/user-security/pom.xml
@@ -7,12 +7,12 @@
   <version>1.0</version>
   <packaging>pom</packaging>
 
-  <distributionManagement>
+  <!-- <distributionManagement>
     <site>
       <id>website</id>
-      <url>scp://webhost.company.com/www/website</url>
+      <url>atic</url>
     </site>
-  </distributionManagement>
+  </distributionManagement> -->
 
   <properties>
     <java-version>1.7</java-version>
@@ -23,6 +23,41 @@
 	<log4j.version>1.2.17</log4j.version>
 	<slf4j.version>1.6.1</slf4j.version>
   </properties>
+  <dependencies>
+  	<dependency>
+		   <groupId>junit</groupId>
+		   <artifactId>junit</artifactId>
+		   <version>4.12</version>
+		   <scope>test</scope>
+		   <exclusions>
+		       <exclusion>
+		           <groupId>org.hamcrest</groupId>
+		           <artifactId>hamcrest-core</artifactId>
+		       </exclusion>
+		   </exclusions>
+		</dependency>
+		<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest-library</artifactId>
+		    <version>1.3</version>
+		    <scope>test</scope>
+		</dependency>
+	
+  </dependencies>
+      <build>
+        <defaultGoal>install</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>${java-version}</source>
+					<target>${java-version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   <modules>
   	<module>usm-api</module>
   	<module>usm-businesslogic</module>
