--- a/user-security/usm-api/pom.xml
+++ b/user-security/usm-api/pom.xml
@@ -10,16 +10,62 @@
   <artifactId>usm-api</artifactId>
   <name>usm-api</name>
   <url>http://maven.apache.org</url>
+   
+  <dependencies>
+	<dependency>
+		<groupId>${project.parent.groupId}</groupId>
+		<artifactId>usm-persistence</artifactId>
+		<version>${project.parent.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-test</artifactId>
+	    <version>4.3.0.RELEASE</version>
+	    <scope>test</scope>
+	</dependency>
+    <dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>${mybatis-spring.version}</version>
+	</dependency>
+	
+    <!-- LOG4J -->
+	<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>apache-log4j-extras</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>	
+     <!-- Spring Context -->
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${org.springframework.version}</version>
+	</dependency>	
+	
+  </dependencies>
+</project>
+
+<!-- <?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.anabatic.usm</groupId>
+    <artifactId>anabatic-usm</artifactId>
+    <version>1.0</version>
+  </parent>
+  <artifactId>usm-api</artifactId>
+  <name>usm-api</name>
+  <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
 		<groupId>${project.parent.groupId}</groupId>
 		<artifactId>usm-persistence</artifactId>
@@ -32,3 +78,4 @@
 	</dependency>
   </dependencies>
 </project>
+ -->
