--- a/user-security/usm-persistence/pom.xml
+++ b/user-security/usm-persistence/pom.xml
@@ -13,13 +13,14 @@
   
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <!-- Mybatis -->
+    <dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-test</artifactId>
+	    <version>4.3.0.RELEASE</version>
+	    <scope>test</scope>
+	</dependency>
+    
     <dependency>
 	    <groupId>org.mybatis</groupId>
 	    <artifactId>mybatis</artifactId>
