--- a/user-security/usm-persistence/src/main/resources/jdbc.properties
+++ b/user-security/usm-persistence/src/main/resources/jdbc.properties
@@ -4,7 +4,7 @@
 #jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #jdbc.url=jdbc:postgresql://localhost:5432/ibanking
-jdbc.url=jdbc:postgresql://10.50.51.6:5432/ibanking_ib_new
+jdbc.url=jdbc:postgresql://10.50.51.6:5432/anabatic
 jdbc.username=postgres
 jdbc.password=123456
 jdbc.driver=org.postgresql.Driver
