--- a/user-security/pom.xml
+++ b/user-security/pom.xml
@@ -57,5 +57,6 @@
   	<module>usm-businesslogic</module>
   	<module>usm-persistence</module>
     <module>usm-service</module>
+    <module>usm-core</module>
   </modules>
 </project>
