--- a/user-security/usm-persistence/pom.xml
+++ b/user-security/usm-persistence/pom.xml
@@ -15,6 +15,11 @@
   <dependencies>
     <!-- Mybatis -->
     <dependency>
+		<groupId>${project.parent.groupId}</groupId>
+		<artifactId>usm-core</artifactId>
+		<version>${project.parent.version}</version>
+	</dependency>
+    <dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-test</artifactId>
 	    <version>4.3.0.RELEASE</version>
