--- a/user-security/usm-api/pom.xml
+++ b/user-security/usm-api/pom.xml
@@ -9,12 +9,67 @@
   </parent>
   <artifactId>usm-api</artifactId>
   <name>usm-api</name>
-  <url>http://maven.apache.org</url>
-   
+  <packaging>jar</packaging>
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+            </plugin>
+        </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                        <archive>
+                            <manifest>
+                                <mainClass>Main</mainClass>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>make-assembly</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
   <dependencies>
 	<dependency>
 		<groupId>${project.parent.groupId}</groupId>
 		<artifactId>usm-persistence</artifactId>
+		<version>${project.parent.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${project.parent.groupId}</groupId>
+		<artifactId>usm-service</artifactId>
+		<version>${project.parent.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${project.parent.groupId}</groupId>
+		<artifactId>usm-core</artifactId>
+		<version>${project.parent.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${project.parent.groupId}</groupId>
+		<artifactId>usm-businesslogic</artifactId>
 		<version>${project.parent.version}</version>
 	</dependency>
 	<dependency>
