--- a/user-security/pom.xml
+++ b/user-security/pom.xml
@@ -22,6 +22,7 @@
 	<org.springframework.version>4.3.2.RELEASE</org.springframework.version>
 	<log4j.version>1.2.17</log4j.version>
 	<slf4j.version>1.6.1</slf4j.version>
+   <commons.lang.version>2.6</commons.lang.version>
   </properties>
   <dependencies>
   	<dependency>
