--- a/user-security/usm-core/pom.xml
+++ b/user-security/usm-core/pom.xml
@@ -20,5 +20,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+   <dependency>
+	<groupId>commons-lang</groupId>
+	<artifactId>commons-lang</artifactId>
+	<version>${commons.lang.version}</version>
+  </dependency>
   </dependencies>
 </project>
