--- a/user-security/pom.xml
+++ b/user-security/pom.xml
@@ -37,7 +37,12 @@
 		       </exclusion>
 		   </exclusions>
 		</dependency>
-	
+	<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest-library</artifactId>
+		    <version>1.3</version>
+		    <scope>test</scope>
+		</dependency>
   </dependencies>
       <build>
         <defaultGoal>install</defaultGoal>
