--- a/user-security/pom.xml
+++ b/user-security/pom.xml
@@ -1,68 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.anabatic.usm</groupId>
-  <artifactId>anabatic-usm</artifactId>
-  <version>1.0</version>
-  <packaging>pom</packaging>
-
-  <!-- <distributionManagement>
-    <site>
-      <id>website</id>
-      <url>atic</url>
-    </site>
-  </distributionManagement> -->
-
-  <properties>
-    <java-version>1.7</java-version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <mybatis.version>3.4.1</mybatis.version>
-	<mybatis-spring.version>1.3.0</mybatis-spring.version>
-	<org.springframework.version>4.3.2.RELEASE</org.springframework.version>
-	<log4j.version>1.2.17</log4j.version>
-	<slf4j.version>1.6.1</slf4j.version>
-   <commons.lang.version>2.6</commons.lang.version>
-  </properties>
-  <dependencies>
-  	<dependency>
-		   <groupId>junit</groupId>
-		   <artifactId>junit</artifactId>
-		   <version>4.12</version>
-		   <scope>test</scope>
-		   <exclusions>
-		       <exclusion>
-		           <groupId>org.hamcrest</groupId>
-		           <artifactId>hamcrest-core</artifactId>
-		       </exclusion>
-		   </exclusions>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.anabatic.usm</groupId>
+	<artifactId>anabatic-usm</artifactId>
+	<version>${application.version}</version>
+	<packaging>pom</packaging>
+	<properties>
+		<application.version>1.0</application.version>
+		<java-version>1.7</java-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<mybatis.version>3.4.1</mybatis.version>
+		<mybatis-spring.version>1.3.0</mybatis-spring.version>
+		<org.springframework.version>4.3.2.RELEASE</org.springframework.version>
+		<log4j.version>1.2.17</log4j.version>
+		<slf4j.version>1.6.1</slf4j.version>
+		<commons.lang.version>2.6</commons.lang.version>
+		<postgresql.version>9.3-1102.jdbc41</postgresql.version>
+		<junit.version>4.12</junit.version>
+		<hamcrest.version>1.3</hamcrest.version>
+	</properties>
+	<dependencies>
+		<!-- JUNIT -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-	<dependency>
-		    <groupId>org.hamcrest</groupId>
-		    <artifactId>hamcrest-library</artifactId>
-		    <version>1.3</version>
-		    <scope>test</scope>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
 		</dependency>
-  </dependencies>
-      <build>
-        <defaultGoal>install</defaultGoal>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>${java-version}</source>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<!-- LOG4J -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>apache-log4j-extras</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		
+	</dependencies>
+	<build>
+		<defaultGoal>install</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>${java-version}</source>
 					<target>${java-version}</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-  <modules>
-  	<module>usm-api</module>
-  	<module>usm-businesslogic</module>
-  	<module>usm-persistence</module>
-    <module>usm-service</module>
-    <module>usm-core</module>
-  </modules>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<modules>
+		<module>usm-api</module>
+		<module>usm-businesslogic</module>
+		<module>usm-persistence</module>
+		<module>usm-service</module>
+		<module>usm-core</module>
+	</modules>
 </project>
