--- a/user-security/usm-persistence/src/test/resources/jdbc.properties
+++ b/user-security/usm-persistence/src/test/resources/jdbc.properties
@@ -5,7 +5,7 @@
 
 #jdbc.url=jdbc:postgresql://localhost:5432/ibanking
 jdbc.url=jdbc:postgresql://10.50.51.6:5432/anabatic
-jdbc.username=postgresasdf
+jdbc.username=postgres
 jdbc.password=123456
 jdbc.driver=org.postgresql.Driver
 jdbc.dbContextCore = ibanking
