Change version in pom

--- a/user-security/pom.xml
+++ b/user-security/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.anabatic.usm</groupId>
 	<artifactId>anabatic-usm</artifactId>
-	<version>${application.version}</version>
+	<version>1.0</version>
 	<packaging>pom</packaging>
 	<properties>
 		<application.version>1.0</application.version>
