--- a/user-security/usm-businesslogic/pom.xml
+++ b/user-security/usm-businesslogic/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.anabatic.usm</groupId>
     <artifactId>anabatic-usm</artifactId>
-    <version>${application.version}</version>
+    <version>1.0</version>
   </parent>
   <artifactId>usm-businesslogic</artifactId>
   <name>usm-businesslogic</name>
