--- a/user-security/usm-core/pom.xml
+++ b/user-security/usm-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anabatic.usm</groupId>
 		<artifactId>anabatic-usm</artifactId>
-		<version>${application.version}</version>
+		<version>1.0</version>
 	</parent>
 	<artifactId>usm-core</artifactId>
 	<name>usm-core</name>
